# mmls_2026_group11

./: .dockerignore  .gitignore  Dockerfile  EDA_movielens100k.ipynb  HISTORY.md  README.md  docker-compose.yml  ml100k_ratings.csv  prototype.ipynb  pyproject.toml  requirements.txt
configs/: base.yaml  bench_student_blockwise.yaml  bench_student_fp32.yaml  bench_student_int8.yaml  bench_student_kd.yaml  student_kd.yaml  teacher.yaml
configs/debug_runs/: debug_seed1337_lr1em04_comp16.yaml  debug_seed1337_lr1em04_comp32.yaml  debug_seed1337_lr1em04_comp48.yaml  debug_seed1337_lr1em04_comp64.yaml  debug_seed1337_lr1em04_comp8.yaml  debug_seed1337_lr3em04_comp16.yaml  debug_seed1337_lr3em04_comp32.yaml  debug_seed1337_lr3em04_comp48.yaml  debug_seed1337_lr3em04_comp64.yaml  debug_seed1337_lr3em04_comp8.yaml  debug_seed1338_lr1em04_comp16.yaml  debug_seed1338_lr1em04_comp32.yaml  debug_seed1338_lr1em04_comp48.yaml  debug_seed1338_lr1em04_comp64.yaml  debug_seed1338_lr1em04_comp8.yaml  debug_seed1338_lr3em04_comp16.yaml  debug_seed1338_lr3em04_comp32.yaml  debug_seed1338_lr3em04_comp48.yaml  debug_seed1338_lr3em04_comp64.yaml  debug_seed1338_lr3em04_comp8.yaml  debug_seed1339_lr1em04_comp16.yaml  debug_seed1339_lr1em04_comp32.yaml  debug_seed1339_lr1em04_comp48.yaml  debug_seed1339_lr1em04_comp64.yaml  (+6 more)
configs/parallelism/: ddp.yaml  (+23 more)
data/: ml100k_ratings.csv
models/: compressor.py  decoder.py  encoder.py
src/: app.py  benchmark_compression.py  config.py  export_teacher_embeddings.py  train.py
tests/: test_blockwise_scoring.py  test_dynamic_int8.py  test_fake_quant.py
(+142 files in other folders)
